--- a/wsgi/static/helpapp/index.html
+++ b/wsgi/static/helpapp/index.html
@@ -30,17 +30,17 @@
 
 
 
-<h1>About Liberec Flood Application</h1>
+<h1>Information about floods</h1>
 
 
 
     <ul class="list-group">
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Cras justo odio</a></li>
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Dapibus ac facilisis in</a></li>
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Morbi leo risus</a></li>
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Morbi leo risus</a></li>
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Porta ac consectetur ac</a></li>
-      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Vestibulum at eros</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>What is a flood?</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Preparation for a flood</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>What to do during a flood?</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>What to do after a flood?</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Psychological aspects</a></li>
+      <li class="list-group-item"><a href="details.html"><div class="listimage first"></div>Most common mistakes</a></li>
     </ul>
 
 </div>
